apps/change/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: change
  namespace: default
spec:
  selector:
    matchLabels:
      app: change
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: change
    spec:
      containers:
        - name: change
          image: "ghcr.io/dgtlmoon/changedetection.io:latest"
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: /datastore
              name: change-content
        - name: playwright-chrome
          image: "browserless/chrome"
      volumes:
        - name: change-content
          persistentVolumeClaim:
            claimName: change-claim
