apps/change/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: change
  namespace: default
spec:
  selector:
    app: change
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
